# fixity-decl

./: README.md  fixity-decl.cabal  test.fd
app/: Main.hs
src/: Parser.hs
