name:                fixity-decl
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/romac/fixity-decl#readme
license:             BSD3
license-file:        LICENSE
author:              Romain Ruetschi
maintainer:          romain.ruetschi@gmail.com
copyright:           2016 Romain Ruetschi
category:            Development
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Parser
  build-depends:       base >= 4.7 && < 5
                     , megaparsec
                     , text
                     , containers
  default-language:    Haskell2010
  ghc-options:         -Wall

executable fixity-decl
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       base
                     , fixity-decl
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N

source-repository head
  type:     git
  location: https://github.com/romac/fixity-decl
